v4l-dvb: Use correct make flags
I was running into issues where compilation would fail because it thought
the architecture was aarch64 instead of arm64. This patch seems to fix it.

[squash, remove already set flags, add committ message]
Signed-off-by: Tomasz Maciej Nowak <tmn505@gmail.com>

--- a/v4l-dvb/Makefile
+++ b/v4l-dvb/Makefile
@@ -28,6 +28,9 @@ MAKE_VARS += \
 	DIR=$(LINUX_DIR) \
 	SRCDIR=$(LINUX_DIR)
 
+MAKE_FLAGS += \
+	ARCH=$(LINUX_KARCH)
+
 define Build/Prepare
 	$(call Build/Prepare/Default)
 
