revert Makefile change

--- a/v4l-dvb/Makefile
+++ b/v4l-dvb/Makefile
@@ -52,8 +52,7 @@ define Build/Prepare
 endef
 
 define Build/Configure
-	$(call Build/Compile/Default,allyesconfig) \
-	cat ./v4l_config >> $(PKG_BUILD_DIR)/v4l/.config;
+	$(call Build/Compile/Default,allyesconfig)
 endef
 
 define Build/InstallDev
