dvb-apps: remove BROKEN
This was tested in setup:
- Vodafone (ex-UPC) DVB-C network
together with DVB-C USB tuner with CI(+) slot
by using tvheadend and enabled dvbcsa and dvben50221

Installed and confirmed to work:
libdvbapi - 3d43b280298c-1
libdvben50221 - 3d43b280298c-1

Tested on router Turris 1.1, powerpc8540, OpenWrt 21.02.2

I did not try other packages

Signed-off-by: Josef Schlehofer <pepe.schlehofer@gmail.com>

--- a/dvb-apps/Makefile
+++ b/dvb-apps/Makefile
@@ -51,7 +51,7 @@ define DvbBuildApp
     SECTION := multimedia
     CATEGORY := Multimedia
     TITLE := $(1) application
-    DEPENDS += @BROKEN $$(foreach p,$(3),+lib$$(p)) $$(foreach p,$(4),+dvb-app-$$(p)) $(5)
+    DEPENDS += $$(foreach p,$(3),+lib$$(p)) $$(foreach p,$(4),+dvb-app-$$(p)) $(5)
   endef
 
   define Package/dvb-app-$(1)/description
@@ -100,7 +100,7 @@ define DvbBuildLibrary
     SECTION := libs
     CATEGORY := Libraries
     TITLE := $(2) library
-    DEPENDS += @BROKEN $$(foreach p,$(3),+lib$$(p)) $(4)
+    DEPENDS += $$(foreach p,$(3),+lib$$(p)) $(4)
   endef
 
   define Package/lib$(1)/description
@@ -133,7 +133,6 @@ define Package/dvb-keymaps-av7110
   SECTION := multimedia
   CATEGORY := Multimedia
   TITLE := av7110 keymaps
-  DEPENDS := @BROKEN
 endef
 
 define Package/dvb-keymaps-av7110/description
