oscam: bump to 11718 revision
Additionally small improvements all over the place.

Signed-off-by: Tomasz Maciej Nowak <tmn505@gmail.com>

--- a/oscam/Config.in
+++ b/oscam/Config.in
@@ -198,6 +198,11 @@ config OSCAM_CS_CACHEEX
 	bool "Cache exchange"
 	default y
 
+config OSCAM_CS_CACHEEX_AIO
+	bool "Cache exchange AIO CW cache"
+	depends on OSCAM_CS_CACHEEX
+	default n
+
 config OSCAM_CW_CYCLE_CHECK
 	bool "CW Cycle Check"
 	default y
