satpi: bump version to 1.6.2
Additionally remove broken flag, as that is unrelated to vdr package WiP
state.

Signed-off-by: Tomasz Maciej Nowak <tmn505@gmail.com>

--- a/satpi/Makefile
+++ b/satpi/Makefile
@@ -1,23 +1,24 @@
+# SPDX-License-Identifier: GPL-2.0-only
 #
-# Copyright (C) 2017-2018 Tomasz Maciej Nowak <tomek_n@o2.pl>
-#
-# This is free software, licensed under the GNU General Public License v2.
-# See /LICENSE for more information.
+# Copyright (C) 2017-2022 Tomasz Maciej Nowak <tmn505@gmail.com>
 #
 include $(TOPDIR)/rules.mk
 
 PKG_NAME := satpi
+PKG_VERSION := 1.6.2
 PKG_RELEASE := 1
 
 PKG_SOURCE_PROTO := git
 PKG_SOURCE_URL := https://github.com/Barracuda09/SATPI.git
-PKG_SOURCE_VERSION := 6d1e45033d8fcb78978a17b839a63658e6c376be
-PKG_VERSION := 1.5.238-$(shell printf '%.8s' $(PKG_SOURCE_VERSION))
+PKG_SOURCE_VERSION := c4077cab8048d211d8b7181a9da05f5d1fc61409
+PKG_MIRROR_HASH := 9016d84c55ba545d1956c050389eb6e2db11d0a7bedd58efbed10825465c2c51
 
 PKG_LICENSE := GPL-2.0
-PKG_LICENSE_FILE := LICENSE
+PKG_LICENSE_FILES := LICENSE
 
-PKG_MAINTAINER := Tomasz Maciej Nowak <tomek_n@o2.pl>
+PKG_MAINTAINER := Tomasz Maciej Nowak <tmn505@gmail.com>
+
+PKG_BUILD_PARALLEL := 1
 
 include $(INCLUDE_DIR)/package.mk
 
@@ -26,8 +27,7 @@ define Package/satpi
   CATEGORY := Multimedia
   TITLE := SAT>IP server
   URL := http://barracuda09.github.io/SATPI
-  DEPENDS := @BROKEN +libstdcpp +SATPI_LIBDVBCSA:libdvbcsa
-  MENU := 1
+  DEPENDS := +libatomic +libstdcpp +BUILD_PATENTED&&SATPI_LIBDVBCSA:libdvbcsa
 endef
 
 define Package/satpi/description
@@ -37,17 +37,13 @@ endef
 
 define Package/satpi/config
 	if PACKAGE_satpi
-
 		config SATPI_LIBDVBCSA
 			bool "Channels descrambling with libdvbcsa"
 			default n
-
 	endif
 endef
 
-ifeq ($(CONFIG_SATPI_LIBDVBCSA),y)
-	MAKE_FLAGS += LIBDVBCSA=yes
-endif
+MAKE_FLAGS += $(if $(CONFIG_SATPI_LIBDVBCSA),LIBDVBCSA=yes)
 
 define Package/satpi/install
 	$(INSTALL_DIR) $(1)/usr/sbin
