--- a/satpi/files/satpi.config
+++ b/satpi/files/satpi.config
@@ -19,3 +19,6 @@ config satpi
 
 	# 'bool' do NOT advertise server
 #	option no_ssdp '0'
+
+	# 'device' set the network interface to bind to (eg. eth0)
+	option iface_name 'br-lan'
