--- a/vdr-control/Makefile
+++ b/vdr-control/Makefile
@@ -1,49 +1,49 @@
+# SPDX-License-Identifier: GPL-2.0-only
 #
-# Copyright (C) 2017 Tomasz Maciej Nowak <tomek_n@o2.pl>
-#
-# This is free software, licensed under the GNU General Public License v2.
-# See /LICENSE for more information.
+# Copyright (C) 2017-2022 Tomasz Maciej Nowak <tmn505@gmail.com>
 #
 include $(TOPDIR)/rules.mk
 
 PKG_NAME := vdr-control
-PKG_VERSION := 0.0.2a-kw3
+PKG_VERSION := 1.0.0
 PKG_RELEASE := 1
 
-PKG_BUILD_DIR := $(BUILD_DIR)/control-$(PKG_VERSION)
-PKG_SOURCE := $(PKG_NAME)-$(PKG_VERSION).tar.gz
-PKG_SOURCE_URL := http://www.u32.de/download
+PKG_SOURCE_PROTO := git
+PKG_SOURCE_URL := https://github.com/wirbel-at-vdr-portal/vdr-plugin-control.git
+PKG_SOURCE_VERSION := 09fb0a510445041c5df875452c736816e2a1b298
+PKG_MIRROR_HASH := 4174551496fc6b7337c89e03d886faea6c7e058214d42094fbf98c6043bdfe25
 
 PKG_LICENSE := GPL-2.0
-PKG_LICENSE_FILE := COPYING
+PKG_LICENSE_FILES := LICENSE
 
-PKG_MAINTAINER := Tomasz Maciej Nowak <tomek_n@o2.pl>
+PKG_MAINTAINER := Tomasz Maciej Nowak <tmn505@gmail.com>
+
+PKG_BUILD_PARALLEL := 1
 
 include $(INCLUDE_DIR)/package.mk
 
 define Package/vdr-control
   SECTION := multimedia
   CATEGORY := Multimedia
-  TITLE := VDR telnet control plugin
+  TITLE := Telnet control of a VDR
+  URL := https://github.com/wirbel-at-vdr-portal/vdr-plugin-control
   DEPENDS := vdr
-  URL := https://www.u32.de/vdr.html#control
 endef
 
 define Package/vdr-control/description
- Control VDR with telnet.
+ Control VDR OSD with telnet client.
 endef
 
-MAKE_FLAGS += \
-	VDRDIR=$(STAGING_DIR)/usr/include/vdr \
-	LIBDIR=$(PKG_BUILD_DIR)
+define Build/Configure
+	$(SED) '/^PKGCFG =/c PKGCFG = $$$$(shell pkg-config --variable=$$$$(1) $$$$(STAGING_DIR)/usr/lib/pkgconfig/vdr.pc)' $(PKG_BUILD_DIR)/Makefile
+endef
 
 define Package/vdr-control/install
-	$(INSTALL_DIR) $(1)/usr/lib/vdr
-	$(INSTALL_BIN) $(PKG_BUILD_DIR)/libvdr-*.so.* $(1)/usr/lib/vdr/
+	$(MAKE) -C $(PKG_BUILD_DIR) DESTDIR=$(1) install-lib
 
 	$(INSTALL_DIR) $(1)/etc/vdr/conf.d
 	echo [control] > $(1)/etc/vdr/conf.d/50-control.conf
-	$(CP) ./files/remote.conf $(1)/etc/vdr/
+	$(CP) ./files/remote.conf $(1)/etc/vdr/.
 endef
 
 $(eval $(call BuildPackage,vdr-control))
