vdr-dvbapi: bump version to 2.2.6
Additionally let the user choose if AES key support is wanted.

Signed-off-by: Tomasz Maciej Nowak <tmn505@gmail.com>

--- a/vdr-dvbapi/Makefile
+++ b/vdr-dvbapi/Makefile
@@ -1,23 +1,24 @@
+# SPDX-License-Identifier: GPL-2.0-only
 #
-# Copyright (C) 2017-2018 Tomasz Maciej Nowak <tomek_n@o2.pl>
-#
-# This is free software, licensed under the GNU General Public License v2.
-# See /LICENSE for more information.
+# Copyright (C) 2017-2022 Tomasz Maciej Nowak <tmn505@gmail.com>
 #
 include $(TOPDIR)/rules.mk
 
 PKG_NAME := vdr-dvbapi
-PKG_VERSION := 2.2.4
-PKG_RELEASE := 2
+PKG_VERSION := 2.2.6
+PKG_RELEASE := 1
 
 PKG_SOURCE_PROTO := git
 PKG_SOURCE_URL := https://github.com/manio/vdr-plugin-dvbapi.git
-PKG_SOURCE_VERSION := d7c75875430dfdee84b04a87ad15cca0410df40b
+PKG_SOURCE_VERSION := c5f3648c8f0bb7213280253bad106a6a3e113b9e
+PKG_MIRROR_HASH := f5b97d4d2fb0bfc96144a4976b7561e520bf4255535851852bf1d30a36ec855e
 
 PKG_LICENSE := GPL-2.0
-PKG_LICENSE_FILE := COPYING
+PKG_LICENSE_FILES := COPYING
 
-PKG_MAINTAINER := Tomasz Maciej Nowak <tomek_n@o2.pl>
+PKG_MAINTAINER := Tomasz Maciej Nowak <tmn505@gmail.com>
+
+PKG_BUILD_PARALLEL := 1
 
 include $(INCLUDE_DIR)/package.mk
 
@@ -25,15 +26,34 @@ define Package/vdr-dvbapi
   SECTION := multimedia
   CATEGORY := Multimedia
   TITLE := VDR dvbapi bridge to OSCam
-  DEPENDS := vdr +libdvbcsa +libopenssl
   URL := https://github.com/manio/vdr-plugin-dvbapi
+  DEPENDS := vdr +@BUILD_PATENTED +libdvbcsa +VDR_DVBAPI_SSL:libopenssl
 endef
 
 define Package/vdr-dvbapi/description
  VDR dvbapi plugin for use with OSCam.
 endef
 
-MAKE_FLAGS += LIBDVBCSA=1
+define Package/vdr-dvbapi/config
+	if PACKAGE_vdr-dvbapi
+
+		config VDR_DVBAPI_SSL
+			bool "AES keys support (openssl)"
+			default n
+
+	endif
+endef
+
+MAKE_FLAGS += \
+	LIBDVBCSA=1 \
+	$(if $(CONFIG_VDR_DVBAPI_SSL),LIBSSL=1)
+
+define Build/Configure
+	$(SED) \
+		'/^PKGCFG  =/c PKGCFG = $$$$(shell pkg-config --variable=$$$$(1) $$$$(STAGING_DIR)/usr/lib/pkgconfig/vdr.pc)' \
+		-e '/^LIBSSL =/d' \
+		$(PKG_BUILD_DIR)/Makefile
+endef
 
 define Package/vdr-dvbapi/install
 	$(MAKE) -C $(PKG_BUILD_DIR) $(MAKE_FLAGS) DESTDIR=$(1) install-lib
