v4l-dvb: make aware of various tree structure
Signed-off-by: Tomasz Maciej Nowak <tmn505@gmail.com>

--- a/v4l-dvb/Makefile
+++ b/v4l-dvb/Makefile
@@ -54,7 +54,7 @@ endef
 define Build/Configure
 	$(SCRIPT_DIR)/package-metadata.pl \
 		kconfig \
-		$(TMP_DIR)/info/.packageinfo-v4l-dvb \
+		$(TMP_DIR)/info/.packageinfo*v4l-dvb \
 		$(TOPDIR)/.config \
 		> $(PKG_BUILD_DIR)/$(PKG_EXTMOD_SUBDIRS)/.config
 
