--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -12,26 +12,56 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     env:
-      LANG: en_US.UTF-8
       TARGET: x86/64
 
     steps:
       - name: Prepare
         run: |
-          sudo locale-gen en_US.UTF-8
-          sudo update-locale LANG=en_US.UTF-8
-          SDK_TARBALL=$(curl -s https://downloads.openwrt.org/snapshots/targets/${TARGET}/sha256sums | awk -F'*' '/openwrt-sdk/ {printf $2}')
-          curl -O https://downloads.openwrt.org/snapshots/targets/${TARGET}/${SDK_TARBALL}
-          tar -x -J -f ${SDK_TARBALL}
-          cd ${SDK_TARBALL%.tar.xz}/package
-          git clone --depth 1 "$GITHUB_SERVER_URL/$GITHUB_REPOSITORY.git"
-          echo "SDK=${SDK_TARBALL%.tar.xz}" >> $GITHUB_ENV
+          SDK_TAR="$(curl -s https://downloads.openwrt.org/snapshots/targets/${TARGET}/sha256sums | awk -F'*' '/openwrt-sdk/ {printf $2}')"
+          git clone --depth 1 ${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}.git ${SDK_TAR%.tar.xz}/package
+          git clone --depth 1 --branch gh-pages ${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}.git repo || true
+          curl -O https://downloads.openwrt.org/snapshots/targets/${TARGET}/${SDK_TAR}
+          tar -x -J -f ${SDK_TAR}
+          echo "SDK=${SDK_TAR%.tar.xz}" >> ${GITHUB_ENV}
+
+      - name: test cached
+        run: |
+          ls -l ${SDK}
+          ls -l -R ${SDK}/dl
 
       - name: Build artifacts
         run: |
-          ls -l ${SDK}/package
-          pwd
           cd ${SDK}
           printf "CONFIG_BUILD_LOG=y\nCONFIG_SIGNED_PACKAGES=n\n" >> .config
           make defconfig
           make -j$(nproc) V=s
+          echo "LOG_ARCHIVE_NAME=${TARGET/\//-}-${GITHUB_WORKFLOW_SHA}" >> ${GITHUB_ENV}
+          rm -R dl/*/
+
+      - name: Cache source
+        uses: actions/cache@v3
+        with:
+          key: downloads
+          restore-keys: downloads
+          path: ${{env.SDK}}/dl
+
+      - name: Store logs
+        uses: actions/upload-artifact@v3
+        with:
+          name: ${{env.LOG_ARCHIVE_NAME}}-logs
+          path: ${{env.SDK}}/logs/
+
+      - name: Publish packages
+        if: ${{ github.event_name == 'push' || github.event_name == 'workflow_dispatch' }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          mkdir -p repo/snapshots
+          cp -R -f ${SDK}/bin/. repo/snapshots/.
+          cd repo
+          git update-ref -d HEAD
+          git config --local user.name "github-actions[bot]"
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add .
+          git commit -m "Publish ${GITHUB_WORKFLOW_SHA} packages"
+          git push -f https://${GITHUB_REPOSITORY_OWNER}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git gh-pages
